# python

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/kiriminaja/: __init__.py  client.py  config.py  http.py  transport.py
src/kiriminaja/services/: address.py  courier.py  coverage_area.py  credit.py  order.py  payment.py  pickup.py
src/kiriminaja/types/: address.py  enums.py  order.py
src/kiriminaja/utils/: __init__.py  volumetric.py
tests/: test_async_client.py  test_client_and_services.py  test_transport.py  test_volumetric.py
