[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "kiriminaja"
dynamic = ["version"]
description = "Official Python SDK for the KiriminAja logistics API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "KiriminAja Team", email = "team@kiriminaja.com" }]
keywords = ["kiriminaja", "logistics", "shipping", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://developer.kiriminaja.com"
Repository = "https://github.com/kiriminaja/python"

[tool.hatch.build.targets.wheel]
packages = ["src/kiriminaja"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/kiriminaja/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "mypy>=1.11", "build>=1.0", "twine>=6"]
